e2e/istio/cluster.yaml
# https://www.arthurkoziel.com/running-knative-with-istio-in-kind/
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
nodes:
  - role: control-plane
    extraPortMappings:
      - containerPort: 32000
        hostPort: 80
