e2e/istio/patch-ingressgateway-nodeport.yaml
# https://www.arthurkoziel.com/running-knative-with-istio-in-kind/
spec:
  type: NodePort
  ports:
    - name: http2
      nodePort: 32000
      port: 80
      protocol: TCP
      targetPort: 80
